Rough mockup of summer rates module

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,5 +1,13 @@
 /* 01-index */
 
+.summer-rates {
+  background-color: #333;
+  color: #fff;
+}
+
+.explore-button {
+  border-radius: 0;
+}
 
 /* 02-about-us */
 
