Stitch modules together and group css in same file for 01-index

--- a/css/01-index.css
+++ b/css/01-index.css
@@ -1,4 +1,33 @@
-/* summer-rates-module */
+/* Header and Navigation Bar */
+
+#header-module .navbar {
+  border-radius: 0px;
+  margin-bottom: 0px;
+  border: 0px;
+}
+
+#header-module .navbar-inverse {
+  background-color: #363636
+}
+
+#header-module .col-md-8 {
+  background-color: #363636
+}
+
+#header-module .navbar .active {
+  color: #fff;
+  font-weight: bold;
+  border-bottom: 3px solid #fff;
+}
+
+#header-module .logo {
+  background: url("../assets/logo_160.png") no-repeat 0 -40px;
+  height: 69px;
+  width: 160px;
+  float: right;
+}
+
+/* Summer Rates */
 
 .summer-rates {
   background-color: #333;
@@ -12,4 +41,166 @@
 .carousel {
   position: fixed;
   bottom: 375px;
+}
+
+/* Reservations */
+
+.header-section {
+  background-color: #313131;
+  padding: 5% 20%;
+}
+
+#hotel-reservation-module .module-content,
+#hotel-reservation-module .module-tab .col-md-1 {
+  background-color: #FAFAFA;
+}
+
+.btn-group {
+  margin-right: 15px;
+
+}
+
+.resize {
+  width: 11%;
+}
+
+#button-names {
+  margin-left: 5px;
+  padding: 10px;
+}
+
+.input-row {
+  margin-left: 5px;
+  margin-bottom: 25px;
+}
+
+/* Icons */
+
+.icon-card .text-center {
+  padding-top: 6px;
+}
+
+.icon-desc .text-center {
+  color: #a8a8a8;
+}
+
+
+ .discover-card {
+  color: #e1d8c6;
+}
+
+.icon-desc .read-more {
+  color: #e1d8c6;
+}
+
+/* About Hotel */
+
+.col-md-3 {
+  border: 2px solid black;
+}
+
+.box {
+  border: 10px solid black;
+  margin: 4px;
+  padding: 4px;
+}
+
+.padding {
+  width: 12.4999995%;
+}
+
+p {
+  font-family: Arial, sans-serif;
+}
+
+.about-hotel .about-hotel-title {
+  font-size: 40px;
+  font-family: Arial, sans-serif;
+  color: #e1d8c6;
+}
+
+.about-home-desc {
+  font-size: 18px;
+  color: #a8a8a8;
+  margin-bottom: 5%;
+}
+
+.box-title {
+  font-size: 16px;
+}
+
+.box-desc {
+  color: #a8a8a8;
+}
+
+/* News, Announcements, and Products */
+
+a.news1 {
+  color: black;
+  font-size: 12px;
+  line-height: 1.0;
+  padding: 0;
+}
+
+a {
+  margin-bottom: 5px;
+}
+
+.news {
+  border: 1px solid grey;
+  margin-top: 0;
+  padding: 0;
+}
+
+.announcements {
+  border: 1px solid grey;
+  font-size: 12px;
+  margin: 0;
+  padding: 0;
+}
+
+.products {
+  border: 1px solid grey;
+  font-size: 12px;
+  margin: 0;
+  padding: 0;
+}
+
+.top-buffer{
+  margin-top: 20px;
+}
+
+.btn-view-all {
+  display: inline-block;
+  padding: 6px 10px;
+  margin-bottom: 0;
+  font-size: 12px;
+  font-weight: normal;
+  line-height: 1.0;
+  text-align: center;
+  vertical-align: middle;
+  border: 1px solid black;
+  border-radius: 1px;
+  padding: 10px 16px;
+}
+
+.border-line{
+  display: block;
+  width: 90%;
+  height: 1px;
+  background: black;
+  margin: 2px auto;
+}
+
+/* Footer */
+
+footer ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+footer .fa-caret-right {
+  margin-left: 10px;
+  background-color: black;
 }
