--- a/css/footer.css
+++ b/css/footer.css
@@ -1,14 +1,11 @@
-ul {
+footer ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
 
-.fa-caret-right {
+footer .fa-caret-right {
   margin-left: 10px;
   background-color: black;
 }
 
-.logo {
-  vertical-align: middle;
-}
