create where we are module in 03-contact.html

--- a/css/02-about-us.css
+++ b/css/02-about-us.css
@@ -36,6 +36,8 @@ h1 {
   padding: 0.30%;
   margin-top: 10px;
   color: white;
+  font-family: Times;
+  font-size: 18px;
 }
 
 .desc-about-content {
