--- a/css/01-index.css
+++ b/css/01-index.css
@@ -139,45 +139,41 @@ p {
 
 /* News, Announcements, and Products */
 
-a.news1 {
-  color: black;
-  font-size: 12px;
-  line-height: 1.0;
-  padding: 0;
+.nap p {
+    margin: 0px 0px 5px 0px ;
+
 }
 
-a {
-  margin-bottom: 5px;
-}
-
-.news {
+.nap .box {
   border: 1px solid grey;
   margin-top: 0;
   padding: 0;
+  padding: 8px 12px 8px 20px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+
 }
 
-.announcements {
-  border: 1px solid grey;
-  font-size: 12px;
-  margin: 0;
-  padding: 0;
+.nap .col1 {
+  margin-bottom: 20px;
+}
+.nap .text {
+  font-family: Helvetica,arial,freesans,clean,sans-serif;
+  font-size: 11px;
+  text-align: left;
 }
 
-.products {
-  border: 1px solid grey;
-  font-size: 12px;
-  margin: 0;
-  padding: 0;
+.nap .headln {
+    font-size: 12px;
+    text-align: left;
+    margin-top: 0;
+    font-weight: bold;
+
 }
 
-.top-buffer{
-  margin-top: 20px;
-}
-
-.btn-view-all {
+.nap .btn-view-all {
   display: inline-block;
-  padding: 6px 10px;
-  margin-bottom: 0;
+  margin: 20px 0 0 0;
   font-size: 12px;
   font-weight: normal;
   line-height: 1.0;
@@ -188,7 +184,11 @@ a {
   padding: 10px 16px;
 }
 
-.border-line{
+.nap .top-buffer {
+  margin-top:0;
+}
+
+.nap .border-line{
   display: block;
   width: 90%;
   height: 1px;
@@ -197,6 +197,20 @@ a {
 }
 
 /* Footer */
+
+footer h4 {
+  font-color: #fff;
+}
+
+footer .footer-top{
+  background-color: #333;
+  padding-bottom: 10px;
+}
+
+footer .about {
+  word-wrap: break-word;
+  margin-right: 30px;
+}
 
 footer ul {
   list-style-type: none;
@@ -207,4 +221,13 @@ footer ul {
 footer .fa-caret-right {
   margin-left: 10px;
   background-color: black;
+}
+
+footer .logo {
+  vertical-align: middle;
+}
+
+footer .bar {
+  background-color: #363636;;
+  padding-top: 10px;
 }
