--- a/css/09-services.css
+++ b/css/09-services.css
@@ -1,3 +1,24 @@
 .black-space-after {
-  height: 50px;
+  height: 10px;
+}
+
+.sub-header {
+  color: #e1d8c6;
+  font-size: 24px;
+  font-family: Times;
+}
+
+.demo-icon {
+  background: purple;
+  height: 18px;
+  width: 20px;
+  color: white;
+  border: 2px solid purple;
+}
+
+.demo-icon-desc {
+  color: #a8a8a8a8;
+  font-family: arial, sans-serif;
+  font-size: 12px;
+  margin-top: -15px;
 }
