--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?35963977');
-  src: url('../font/fontello.eot?35963977#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?35963977') format('woff2'),
-       url('../font/fontello.woff?35963977') format('woff'),
-       url('../font/fontello.ttf?35963977') format('truetype'),
-       url('../font/fontello.svg?35963977#fontello') format('svg');
+  src: url('../fonts/fontello.eot?35963977');
+  src: url('../fonts/fontello.eot?35963977#iefix') format('embedded-opentype'),
+       url('../fonts/fontello.woff2?35963977') format('woff2'),
+       url('../fonts/fontello.woff') format('woff'),
+       url('../fonts/fontello.ttf?35963977') format('truetype'),
+       url('../fonts/fontello.svg?35963977#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
