--- a/css/07-news-detail.css
+++ b/css/07-news-detail.css
@@ -2,11 +2,15 @@
   height: 350px;
   width: 700px;
   background: #222;
-  border: 5px solid grey;
+  border: 1px solid #222;
 }
 
 
-.blank-img {
+.news-blank-img {
   margin: 140px 0 0 325px;
 
+}
+
+.news-img-dots {
+  margin: 140px 0 0 325px;
 }
