--- a/css/08-news-image.css
+++ b/css/08-news-image.css
@@ -4,11 +4,20 @@
   background-image: url(../assets/background-texture.png);
 }
 
+.news-header h1 {
+  font-weight: 400;
+  margin: 0.5em 0 0.75em 0;
+}
+
+.news-content h2 {
+  margin: -0.05em 0 0 0;
+}
+
 .article-date {
   background-color: #e1d8c6;
   color: #fff;
   display: inline-block;
-  margin: 1em 0 1.5em 0;
+  margin: 1.5em 0;
   padding: 0.75em;
 }
 
@@ -62,10 +71,14 @@
   margin: 1em 0 0 0;
 }
 
-.popular-recent p {
+section p {
   color: gray;
 }
 
-.popular-recent time {
+section time {
   color: lightgray;
+}
+
+.gold-text {
+  color: #e1d8c6;
 }
