--- a/css/09-services.css
+++ b/css/09-services.css
@@ -10,7 +10,7 @@
 
 .demo-icon {
   background: purple;
-  height: 18px;
+  height: 22px;
   width: 20px;
   color: white;
   border: 2px solid purple;
@@ -20,5 +20,19 @@
   color: #a8a8a8a8;
   font-family: arial, sans-serif;
   font-size: 12px;
-  margin-top: -15px;
+  margin-top: -20px;
+}
+.air-conditioner {
+  background: purple;
+  height: 18px;
+  margin-bottom: 8px;
+}
+
+.fridge-icon {
+  background: purple;
+  margin-bottom: 8px;
+}
+
+.free-breakfast {
+  margin-left: -4px;
 }
