--- a/css/04-gallery.css
+++ b/css/04-gallery.css
@@ -32,3 +32,13 @@ Padding: 0 20%;
   margin-top: -120px;
   margin-left: 82px;
 }
+/* Gallery Banner */
+.image-center {
+  border: 1px solid white;
+  margin-left: 400px;
+}
+
+.black-space-products {
+  color: #222;
+  height: 150px;
+}
