added col-md-1 to rows. adjusted Products h1 and Products in banner to align. updated CSS styles to align buttons.

--- a/css/05-products.css
+++ b/css/05-products.css
@@ -105,12 +105,9 @@ h1 {
 
 
 /*---Products gallery---*/
-.Container-fluid .row {
-Padding: 0 20%;
-}
 
 #row-gallery {
-  padding: 0 0 10px 15px;
+  padding: 0 0 10px 90px;
 }
 
 .row-image-button {
@@ -118,6 +115,7 @@ Padding: 0 20%;
 }
 #image-button {
   padding: 0 0 15px 0px;
+  margin-right: 50px;
 }
 
 #right-button {
