Add header html and css to every page

--- a/css/01-index.css
+++ b/css/01-index.css
@@ -7,11 +7,11 @@
 }
 
 #header-module .navbar-inverse {
-  background-color: #363636
+  background-color: #363636;
 }
 
 #header-module .col-md-8 {
-  background-color: #363636
+  background-color: #363636;
 }
 
 #header-module .navbar .active {
