--- a/css/02-about-us.css
+++ b/css/02-about-us.css
@@ -1,3 +1,34 @@
+/* Header and Navigation Bar */
+
+#header-module .navbar {
+  border-radius: 0px;
+  margin-bottom: 0px;
+  border: 0px;
+}
+
+#header-module .navbar-inverse {
+  background-color: #363636;
+}
+
+#header-module .col-md-8 {
+  background-color: #363636;
+}
+
+#header-module .navbar .active {
+  color: #fff;
+  font-weight: bold;
+  border-bottom: 3px solid #fff;
+}
+
+#header-module .logo {
+  background: url("../assets/logo_160.png") no-repeat 0 -40px;
+  height: 69px;
+  width: 160px;
+  float: right;
+}
+
+/* About Us */
+
 .container-fluid .row {
   padding: 0.20%;
 }
