added hotel infront of row and box in html and css.

--- a/css/01-about-hotel.css
+++ b/css/01-about-hotel.css
@@ -1,8 +1,8 @@
-.col-md-3 {
+.hotel .col-md-3 {
   border: 2px solid black;
 }
 
-.box {
+.hotel .box {
   border: 10px solid black;
   margin: 4px;
   padding: 4px;
