--- a/css/06-news.css
+++ b/css/06-news.css
@@ -1,5 +1,5 @@
 .news-cards .t-box {
-  background-color: #f0f3f4;
+  background-color: lightgray;
   box-sizing: content-box;
   border: 1px solid #f8f9f9;
   display: inline-block;
@@ -21,13 +21,7 @@
   height: 40px;
   margin-left: 86px;
   margin-top: -100px;
-  
-}
 
-.news-cards .video {
-  border: 10px solid black;
-  margin: 0px 0px 0px 0px;
-  margin-left: 88px;
 }
 
 .news-cards .hdline {
@@ -114,14 +108,17 @@
 }
 
 .news-cards .btn-view-all {
+  border: 1px solid lightgray;
+  border-radius: 0;
+  color: lightgray;
   display: inline-block;
-  padding: 6px 10px;
+  padding: 10px 16px;
   font-size: 12px;
   font-weight: normal;
   line-height: 1.0;
   margin-top: 30px;
+  margin-left: 20px;
   text-align: center;
   vertical-align: middle;
-  border: 1px solid black;
-  padding: 10px 16px;
+
 }
