updated colors in 02-about-us.css and html.

--- a/css/02-about-us.css
+++ b/css/02-about-us.css
@@ -15,9 +15,9 @@
 }
 
 #header-module .navbar .active {
-  color: #fff;
+  color: #ffffff;
   font-weight: bold;
-  border-bottom: 3px solid #fff;
+  border-bottom: 3px solid #ffffff;
 }
 
 #header-module .logo {
@@ -25,6 +25,10 @@
   height: 69px;
   width: 160px;
   float: right;
+}
+
+.navbar-nav {
+  color: #919191;
 }
 
 /* About Us */
@@ -35,7 +39,7 @@
 
 .about-us-back {
   padding: 0.20%;
-  background: #222;
+  background: #313131;
 
 }
 
@@ -48,7 +52,7 @@
 }
 
 h1 {
-  color: #e1d8c6;
+  color: #c0a878;
   padding: 0.20%;
   margin: 40px;
 }
@@ -58,9 +62,17 @@ h1 {
 }
 
 .text-right {
-  color: #a8a8a8a8;
+  color: #bebebe;
   padding: 0.20%;
   margin: 40px;
+}
+
+.text-center {
+  color: #959595;
+}
+
+.icon-card-title {
+  color: #464646;
 }
 
 .desc-about-us {
@@ -71,8 +83,12 @@ h1 {
   font-size: 18px;
 }
 
+.btn-read-more {
+  color: #c2c2c2;
+}
+
 .desc-about-content {
-  color: #a8a8a8a8;
+  color: #c8c8c8;
   margin-top: 20px;
   margin-bottom: 160px;
 }
@@ -90,14 +106,14 @@ h1 {
 }
 
 .team-overview {
-  color: #e1d8c6;
+  color: #c0a878;
   font-size: 32px;
   margin-top: 30px;
 }
 
 .team-overview-desc {
-  font-size: 14px;
-  color: #a8a8a8a8;
+  font-size: 18px;
+  color: #959595;
 }
 
 .png-rows {
@@ -115,10 +131,11 @@ h1 {
   font-size: 20px;
   font-weight: bold;
   margin: 0px 0px 0px 0px;
+  color:#464646;
 }
 
 .founder {
-  color: #a8a8a8a8;
+  color: #d7d7d7;
 }
 
 .team-desc {
