--- a/css/04-gallery.css
+++ b/css/04-gallery.css
@@ -16,9 +16,9 @@
 }
 
 #header-module .navbar .active {
-  color: #fff;
+  color: #ffffff;
   font-weight: bold;
-  border-bottom: 3px solid #fff;
+  border-bottom: 3px solid #ffffff;
 }
 
 #header-module .logo {
@@ -28,12 +28,21 @@
   float: right;
 }
 
+.navbar-nav {
+  color: #919191;
+}
+
 /* Image Gallery */
 
 /*---image gallery---*/
 
 #row-gallery {
   padding: 0 0 10px 120px;
+}
+
+.row-gallery h1 {
+  color: #464646;
+  font-size: 42px;
 }
 
 .row-image-button {
@@ -61,10 +70,15 @@
   margin-top: -120px;
   margin-left: 82px;
 }
+
+.btn-gold {
+  color: #c0a878;
+  border: 1px sold #c0a878;
+}
 /* Gallery Banner */
 .about-us-back {
   padding: 0.20%;
-  background: #222;
+  background: #313131;
 
 }
 
@@ -77,9 +91,10 @@
 }
 
 h1 {
-  color: #e1d8c6;
+  color: #c0a878;
   padding: 0.20%;
   margin: 40px;
+  font-size: 30px;
 }
 
 .left-title {
@@ -87,75 +102,15 @@ h1 {
 }
 
 .text-right {
-  color: #a8a8a8a8;
+  color: #bebebe;
   padding: 0.20%;
   margin: 40px;
-}
-
-.desc-about-us {
-  padding: 0.30%;
-  margin-top: 10px;
-  color: white;
-  font-family: Times;
-  font-size: 18px;
-}
-
-.desc-about-content {
-  color: #a8a8a8a8;
-  margin-top: 20px;
-  margin-bottom: 160px;
-}
-.icons-row {
-  background: white;
-  margin-top: 15px;
-}
-
-.icon-card {
-  background: white;
-}
-
-.icon-desc {
-  background: white;
-}
-
-.team-overview {
-  color: #e1d8c6;
-  font-size: 32px;
-  margin-top: 30px;
-}
-
-.team-overview-desc {
   font-size: 14px;
-  color: #a8a8a8a8;
-}
-
-.png-rows {
-  margin: 30px 2px 5px 2px;
-  height: 180px;
-
 }
 
 .blank-img {
-  margin-top: -100px;
-  margin-left: 63px;
-}
-
-.john-doe {
-  font-size: 20px;
-  font-weight: bold;
-  margin: 0px 0px 0px 0px;
-}
-
-.founder {
-  color: #a8a8a8a8;
-}
-
-.team-desc {
-  margin: 0px;
-}
-
-.social-media-icons {
-  color: #a8a8a8a8;
+  margin-top: -120px;
+  margin-left: 82px;
 }
 
 .spacing {
