--- a/css/06-news.css
+++ b/css/06-news.css
@@ -16,9 +16,9 @@
 }
 
 #header-module .navbar .active {
-  color: #fff;
+  color: #ffffff;
   font-weight: bold;
-  border-bottom: 3px solid #fff;
+  border-bottom: 3px solid #ffffff;
 }
 
 #header-module .logo {
@@ -28,13 +28,17 @@
   float: right;
 }
 
+.navbar-nav {
+  color: #919191;
+}
+
 /* June Banner */
 
 .background-box {
 height: 300px;
 width: 800px;
-background: #222;
-border: 1px solid #222;
+background: #363636;
+border: 1px solid #363636;
 }
 
 .june-img-dots {
@@ -48,14 +52,22 @@ margin: 120px 0 0 375px;
 
 .h4-june-text {
   font-size: 20px;
-  color: white;
+  color: #ffffff;
   margin: 0 0 20px 0;
   padding: 0 0 0 10px;
 
+}
+
+.june-text {
+  color: #c2c2c2;
 }
 
 .june-text,
 .june-text-two {
   font-size: 16px;
   padding: 0 0 0 10px;
+}
+
+.june-text-two {
+  color: #959595;
 }
