update colors in 07-news-detail.html and css.

--- a/css/07-news-detail.css
+++ b/css/07-news-detail.css
@@ -31,13 +31,17 @@
   float: right;
 }
 
+.navbar-nav {
+  color: #919191;
+}
+
 /* News Banner */
 
 .background-box {
   width: 100%;
-  background: #222;
+  background: #363636;
   border: 5px solid grey;
-  border: 1px solid #222;
+  border: 1px solid #363636;
 }
 
 .news-blank-img {
@@ -57,24 +61,26 @@
 .news-header h1 {
   font-weight: 400;
   margin: 0.5em 0 0.75em 0;
+  color: #464646;
 }
 
 .news-content {
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 .news-content h2 {
   margin: 1em 0 0 0;
+  color: #464646;
 }
 
 .news-content p {
-  color: gray;
+  color: #959595;
   font-size: 1.25em;
-} 
+}
 
 .article-date {
-  background-color: #e1d8c6;
-  color: #fff;
+  background-color: #c0a878;
+  color: #ffffff;
   display: inline-block;
   margin: 1.5em 0;
   padding: 0.75em;
@@ -83,6 +89,7 @@
 .social-icons {
   display: inline;
   margin: 0 0 0 1.5em;
+  color: #d7d7d7;
 }
 
 .social-icons a {
@@ -96,29 +103,29 @@
 } */
 
 .logo-fb {
-  background-color: #e1d8c6;
+  background-color: #c0a878;
   color: #fff;
 }
 
-.fa-twitter, 
+.fa-twitter,
 .fa-google-plus-g {
-  color: lightgrey;
+  color: #d7d7d7;
 }
 
 /* Popular/Recent Column */
 
 .popular-recent {
-  background-color: #fff;
+  background-color: #ffffff;
   border: 1px solid lightgray;
 }
 
 .popular-header {
-  color: #e1d8c6;
+  color: #c0a878;
 }
 
 .recent-header {
-  background-color: #333;
-  color: #fff;
+  background-color: #363636;
+  color: #ffffff;
 }
 
 .top-paragraph {
@@ -126,13 +133,13 @@
 }
 
 section p {
-  color: gray;
+  color: #959595;
 }
 
 section time {
-  color: lightgray;
+  color: #c5c5c5;
 }
 
 .gold-text {
-  color: #e1d8c6;
+  color: #c0a878;
 }
