updated banner in about us to reflect the mock up styles remove container-fluid settings that add an extra white bar on the page.

--- a/css/02-about-us.css
+++ b/css/02-about-us.css
@@ -33,9 +33,6 @@
 
 /* About Us */
 
-.container-fluid .row {
-  padding: 0.20%;
-}
 
 .about-us-back {
   padding: 0.20%;
@@ -44,7 +41,7 @@
 }
 
 .about-us-desc {
-  font-family: Times;
+  font-family: Georgia;
 }
 
 .black-space {
@@ -79,7 +76,7 @@ h1 {
   padding: 0.30%;
   margin-top: 10px;
   color: white;
-  font-family: Times;
+  font-family: Georgia;
   font-size: 18px;
 }
 
